# vcpkg

ports/allegro5/: portfile.cmake  vcpkg.json
ports/botan/: portfile.cmake
ports/cpuinfo/: vcpkg.json
ports/eigen3/: portfile.cmake
ports/gdal/: explicitly-find-sqlite3-module.patch  fix-gdal-10727.diff  portfile.cmake  vcpkg.json
ports/gtk3/: vcpkg.json
ports/hdf5/: export-mpi-c.diff  portfile.cmake  vcpkg.json
ports/libiconv/: portfile.cmake  vcpkg.json
ports/libtorch/: cmake-fixes.patch  fix-sleef.patch  portfile.cmake  vcpkg.json
ports/llvm/: portfile.cmake  vcpkg.json
ports/mongoose/: vcpkg.json
ports/neoslippi/: usage
ports/ngtcp2/: portfile.cmake  vcpkg.json
ports/onnx/: portfile.cmake  vcpkg.json
ports/onnxruntime/: fix-cmake-cuda.patch  fix-cmake-tensorrt.patch  fix-cmake.patch  fix-pr-21348.patch  fix-sources.patch  onnxruntime_external_deps.cmake  portfile.cmake  vcpkg.json
ports/onnxruntime-gpu/: vcpkg.json
ports/opencv3/: vcpkg.json
ports/opencv4/: vcpkg.json
ports/openvino/: portfile.cmake
ports/qtbase/: portfile.cmake  vcpkg.json
ports/qttools/: portfile.cmake  vcpkg.json
ports/sqlite3/: portfile.cmake  vcpkg-cmake-wrapper.cmake
ports/xnnpack/: fix-build.patch  portfile.cmake
scripts/: ci.baseline.txt
scripts/azure-pipelines/: acquire-android-sdk.ps1  azure-pipelines.yml
scripts/cmake/: vcpkg_configure_make.cmake  vcpkg_find_acquire_program(PYTHON3).cmake  z_vcpkg_make_python_less_embedded.cmake
scripts/test_ports/vcpkg-ci-gdal/project/: CMakeLists.txt
versions/: baseline.json
versions/b-/: botan.json
(+16 files in other folders)
